updated conference to Ssymposium, removed pictures from schedule, added pictures to descriptions, fixed gap in section from download to sponsors, updated order to ascending of pdf's

--- a/Pulse-master/core/static/css/style.css
+++ b/Pulse-master/core/static/css/style.css
@@ -1101,7 +1101,7 @@ button:focus {
 	background-color: #FFFFFF;
 	display: inline;
 	float: left;
-	padding: 100px 0;
+	padding: 20px 0;
 	width: 100%;
 }
 
